<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephenk.majorready.Level2Q2Activity"
    tools:showIn="@layout/activity_level2_q2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleHeader_Level2Q2Activity"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleQuestion_Level2Q2Activity"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="62dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        android:id="@+id/btnNextL2Q2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="67dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/l2q2headingDNA"
            android:layout_weight="1"
            android:id="@+id/l2q2headingDNA" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/l2q2headingmRNA"
            android:layout_weight="1"
            android:id="@+id/l2q2headingmRNA" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout2"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleIF"
            android:layout_weight="1"
            android:id="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="A"
            android:layout_weight="1"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titlethen" />

        <Spinner
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:id="@+id/L2Q2Spinner1"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout4"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleIF"
            android:layout_weight="1"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="T"
            android:layout_weight="1"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titlethen" />

        <Spinner
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:id="@+id/L2Q2Spinner2"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout5"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleIF"
            android:layout_weight="1"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="C"
            android:layout_weight="1"
            android:id="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titlethen" />

        <Spinner
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:id="@+id/L2Q2Spinner3"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout6"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/linearLayout5"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titleIF"
            android:layout_weight="1"
            android:id="@+id/textView14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="G"
            android:layout_weight="1"
            android:id="@+id/textView15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/titlethen" />

        <Spinner
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:id="@+id/L2Q2Spinner4"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown" />
    </LinearLayout>

</RelativeLayout>
