<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephenk.majorready.Level2ResultsActivity"
    tools:showIn="@layout/activity_level2_results">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/code"
            android:id="@+id/textView28"
            android:layout_weight="0.84" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/question"
            android:layout_weight="1"
            android:id="@+id/textView29" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="1.66">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="75dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="dna = &quot;ATCGGATCGACGCCATATACGC&quot;"
                        android:id="@+id/pTextViewResults2" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.4"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Create your own gene!"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="240dp" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/resultsLevel2Code2"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.4"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/level1ResultsStep2"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/level2ResultsCode3"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.4"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text=" How many mRNA nucleotides will you need to transcribe the DNA?"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/level2ResultsCode4"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.4"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Each mRNA nucleotides corresponds to:"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="75dp"
            android:backgroundTint="@color/green"
            android:text="Finish"
            android:id="@+id/Level2Btn"
            android:onClick="Level2Btn" />
    </LinearLayout>


</LinearLayout>
