<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="10dp"
    android:paddingRight="2dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.stephenk.majorready.Level1ResultsActivity"
    tools:showIn="@layout/activity_level1_results"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/code"
            android:id="@+id/textView28" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/question"
            android:layout_weight="1"
            android:id="@+id/textView29" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="p = .7;"
                        android:id="@+id/pTextView" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/level1ResultsStep1"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="q = 1 - p;"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/level1ResultsStep2"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="AA = p^2;"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/level1ResultsStep3"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Aa = 2*p*q;"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/level1ResultsStep4"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".7"
                    android:layout_marginEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="aa = q^2;"
                        android:id="@+id/textView26" />
                </LinearLayout>

                <View
                    android:background="#555"
                    android:layout_width="5dp"
                    android:layout_height="fill_parent" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/level1ResultsStep5"
                        android:id="@+id/textView27" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="120dp"
            android:layout_weight="1"
            android:layout_height="75dp"
            android:text="End Now"
            android:id="@+id/Level2Btn2"
            android:onClick="Level2Btn2"
            android:background="@drawable/spinnerborder"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="120dp"
            android:layout_weight="1"
            android:layout_height="75dp"
            android:text="Level 2"
            android:id="@+id/Level2Btn"
            android:onClick="Level2Btn"
            android:background="@drawable/spinnerborder"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>


</LinearLayout>
